working UserService
